<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Binary Racer</string>
    <string name="action_restart">Restart</string>
    <string name="hello_world">Hello world!</string>
    <color name="black">#000001</color>
    
    <string name="name_hint_text">Name</string>
    <string name="login_button_text">Go to Driver Meeting</string>
    
    <string name="driver_meeting_title_text">Driver Meeting</string>
    <string name="difficulty_text">Difficulty</string>
    <string name="gold_radiobutton">Gold</string>
    <string name="silver_radiobutton">Silver</string>
    <string name="bronze_radiobutton">Bronze</string>
    <string name="lap_count_text">Number of Laps</string>
    <string name="five_laps_radiobutton">5 Laps</string>
    <string name="ten_laps_radiobutton">10 Laps</string>
    <string name="fifteen_laps_radiobutton">15 Laps</string>
    <string name="start_race_button">Start Race</string>

    <string name="lap_counter_text">Lap Counter</string>
    <string name="you_text">Inner</string>
    <string name="opponent_text">Outer</string>
    <string name="you_count_text">0</string>
    <string name="opponent_count_text">0</string>
    <string name="conver_text">Convert:</string>
    <string name="dec_number_text">#</string>
    <string name="to_binary_text">to :</string>
    
    <string name="zero_button">" 0 "</string>
    <string name="one_button">" 1 "</string>
    <string name="two_button">" 2 "</string>
    <string name="three_button">" 3 "</string>
    <string name="four_button">" 4 "</string>
    <string name="five_button">" 5 "</string>
    <string name="six_button">" 6 "</string>
    <string name="seven_button">" 7 "</string>
    <string name="eight_button">" 8 "</string>
    <string name="nine_button">" 9 "</string>
    <string name="A_button">" A "</string>
    <string name="B_button">" B "</string>
    <string name="C_button">" C "</string>
    <string name="D_button">" D "</string>
    <string name="E_button">" E "</string>
    <string name="F_button">" F "</string>
    <string name="back_button">&lt;--</string>
    <string name="answer_button">" = "</string>
    
    <string name="meeting_wait">Meet with other driver to set the rules.</string>
    
    <string name="credits_text">Credits:\nPurdue EPICS GLEE Spring 2014\nProject Lead and Android\n Development: Brandon Klen</string>
    
    <string name="app_version_text">Android App Version: 1</string>
</resources>
