<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/driverMeetingTextView"
        android:layout_alignTop="@+id/linearLayout1"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/outerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opponent_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/outerCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opponent_count_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="25sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/driverMeetingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/lap_counter_text"
        android:textSize="35sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/driverMeetingTextView"
        android:layout_below="@+id/driverMeetingTextView"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/innerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/innerCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_count_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="25sp" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/convertTextView"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/answerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/zeroButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero_button"
                android:textSize="25sp" />

            <Button
                android:id="@+id/oneButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_button"
                android:textSize="25sp" />

            <Button
                android:id="@+id/twoButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_button"
                android:textSize="25sp" />

            <Button
                android:id="@+id/threeButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_button"
                android:textSize="25sp" />

            <Button
                android:id="@+id/fourButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four_button"
                android:textSize="25sp" />

            <Button
                android:id="@+id/fiveButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five_button"
                android:textSize="25sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/sixButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six_button"
                android:textSize="25sp" />

            <Button
                android:id="@+id/sevenButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seven_button"
                android:textSize="25sp" />

            <Button
                android:id="@+id/eightButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eight_button"
                android:textSize="25sp" />

            <Button
                android:id="@+id/nineButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nine_button"
                android:textSize="25sp" />

            <Button
                android:id="@+id/aButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/A_button"
                android:textSize="25sp" />

            <Button
                android:id="@+id/bButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/B_button"
                android:textSize="25sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/cButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/C_button"
                android:textSize="25sp" />

            <Button
                android:id="@+id/dButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/D_button"
                android:textSize="25sp" />

            <Button
                android:id="@+id/eButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/E_button"
                android:textSize="25sp" />

            <Button
                android:id="@+id/fButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/F_button"
                android:textSize="25sp" />

            <Button
                android:id="@+id/backButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_button"
                android:textSize="25sp" />

            <Button
                android:id="@+id/answerButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/answer_button"
                android:textSize="25sp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/red"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/convertTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout3"
        android:layout_alignRight="@+id/tableLayout1"
        android:layout_below="@+id/linearLayout3"
        android:paddingLeft="20dp"
        android:paddingRight="8dp"
        android:text="@string/to_binary_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="23sp" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/label"
        android:layout_marginTop="30dp"
        android:paddingLeft="20dp"
        android:paddingTop="40dp" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conver_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/numberTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7.05"
            android:paddingLeft="5dp"
            android:text="@string/dec_number_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="23sp" />
    </LinearLayout>

</RelativeLayout>