<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="top|center_horizontal"
    android:orientation="vertical"
    android:padding="40dp" >

    <!-- android:background="#2e587e" -->

    <TextView
        android:id="@+id/driverMeetingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textSize="38sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="180dp"
        android:layout_height="2dp"
        android:background="@drawable/login_gradient"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:padding="5dp" />

    <Button
        android:id="@+id/loginButton"
        style="@style/AppBaseTheme"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/login_button_text" />

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/red"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/creditsTextView"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="25dp"
        android:text="@string/credits_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/appVersionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_version_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:textSize="16sp" />

</LinearLayout>